# quick-and-dirty

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
openspec/changes/add-resilience-and-cities/: design.md  proposal.md  tasks.md
openspec/changes/add-resilience-and-cities/specs/city-favorites/: spec.md
openspec/changes/add-resilience-and-cities/specs/network-retry/: spec.md
openspec/changes/add-weather-geolocation/: design.md  proposal.md  tasks.md
openspec/changes/add-weather-geolocation/specs/cli-input/: spec.md
openspec/changes/add-weather-geolocation/specs/ip-geolocation/: spec.md
src/weather_cli/: __init__.py
